# Portfolio

./: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
.next/: trace
.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: next.js
.next/types/app/: layout.ts  (+1 more)
Project1_AI_Checkers/: CheckersGUI.py  GameBoard.py  OtherStuff.py  PlayingTheGame.py  SearchToolBox.py  main.py  tempCodeRunnerFile.py
cubesat_budget_analyzer/: INSTALL.md  MANIFEST.in  README.md  install_and_run.bat  install_and_run.sh  pyproject.toml  requirements.txt  setup.py
cubesat_budget_analyzer/src/cubesat_budget_analyzer/: __init__.py  __main__.py
cubesat_budget_analyzer/src/cubesat_budget_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cubesat_budget_analyzer/src/cubesat_budget_analyzer/gui/: __init__.py  home_page.py  login_page.py  main_window.py
cubesat_budget_analyzer/src/cubesat_budget_analyzer/gui/tabs/: __init__.py  data_budget_tab.py  link_budget_tab.py
cubesat_budget_analyzer/src/models/: __init__.py  data_budget.py  link_budget.py
cubesat_budget_analyzer/src/utils/: __init__.py  file_manager.py  report_generator.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Hero.tsx  Navigation.tsx  ParticlesBackground.tsx  ProjectCard.tsx  SkillCard.tsx  ThemeToggle.tsx
(+215 files in other folders)
