[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubesat_budget_analyzer"
version = "1.0.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A comprehensive tool for analyzing CubeSat link and data budgets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Aerospace",
]
dependencies = [
    "PyQt6>=6.6.1",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "matplotlib>=3.8.2",
    "reportlab>=4.1.0",
    "sqlalchemy>=2.0.27",
    "scipy>=1.12.0",
    "openpyxl>=3.1.2"
]

[project.scripts]
cubesat-budget-analyzer = "cubesat_budget_analyzer.main:main"

[tool.setuptools.packages.find]
where = ["src"] 